--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div class="selectPerfil_navbar">
-                            <img src="assets/flag.svg" alt="">
+                            <img src="assets/img-perfil.jpg" alt="">
                             <select name="perfilist">
                                    >
                                     <option id="edificio2" value="edificioPlatium">Lucia Almeida</option>
